traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:5: error: not found: value c
    ecritMessage(c)
                 ^TraversalByColumn:6: error: not found: value c
    c = c + 1
    ^